--- a/components/about.html
+++ b/components/about.html
@@ -3,49 +3,34 @@
   <h1 class="title">About Me</h1>
   <div class="section-container">
     <div class="section__pic-container">
-      <img
-        src="./assets/about-pic.jpg"
-        alt="Profile picture"
-        class="about-pic"
-      />
+      <img src="./assets/about-pic.jpg" alt="Profile picture" class="about-pic" />
     </div>
     <div class="about-details-container">
       <div class="about-containers">
         <div class="details-container">
-          <img
-            src="./assets/certifications.png"
-            alt="certifications icon"
-            class="icon"
-          />
+          <img src="./assets/certifications.png" alt="certifications icon" class="icon" />
           <h3>certifications</h3>
           <p>2+ years <br />Python Development</p>
         </div>
         <div class="details-container">
-          <img
-            src="./assets/education.png"
-            alt="Education icon"
-            class="icon"
-          />
+          <img src="./assets/education.png" alt="Education icon" class="icon" />
           <h3>Education</h3>
           <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
         </div>
       </div>
       <div class="text-container">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-          reprehenderit et laborum, rem, dolore eum quod voluptate
-          exercitationem nobis, nihil esse debitis maxime facere minus sint
-          delectus velit in eos quo officiis explicabo deleniti dignissimos.
-          Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-          reiciendis ea magnam? Nulla, impedit fuga!
+          I am a highly motivated Aerospace Engineering graduate from Amirkabir University of Technology with a strong
+          passion for artificial intelligence, computer vision, and machine learning. With hands-on experience in Python
+          development, deep learning, and backend web development, I have successfully contributed to various projects,
+          including sentiment analysis, neural network-based detection systems, and web applications. My academic
+          background, combined with extensive self-driven research and project-based learning, has honed my
+          problem-solving skills and technical expertise. Proficient in multiple programming languages and frameworks, I
+          am eager to apply my knowledge in innovative AI and engineering solutions while continuously learning and
+          evolving in the field.
         </p>
       </div>
     </div>
   </div>
-  <img
-    src="./assets/arrow.png"
-    alt="Arrow icon"
-    class="icon arrow"
-    onclick="location.href='./#certifications'"
-  />
+  <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#certifications'" />
 </section>
