--- a/components/contact.html
+++ b/components/contact.html
@@ -10,6 +10,7 @@
       />
       <p><a href="mailto:hosseintahami2000@gmail.com">hosseintahami2000@gmail.com</a></p>
     </div>
+    <hr>
     <div class="contact-info-container">
       <img
         src="./assets/linkedin.png"
@@ -17,6 +18,15 @@
         class="icon contact-icon"
       />
       <p><a href="https://www.linkedin.com/in/hosseintahami/">LinkedIn</a></p>
+    </div>
+    <hr>
+    <div class="contact-info-container">
+      <img
+        src="./assets/Telegram.png"
+        alt="Telegram icon"
+        class="icon contact-icon"
+      />
+      <p><a href="https://t.me/hossein_tahami">Telegram</a></p>
     </div>
   </div>
 </section>
