Updaate profile.html

--- a/components/profile.html
+++ b/components/profile.html
@@ -9,8 +9,7 @@
     <div class="btn-container">
       <button
         class="btn btn-color-2"
-        onclick="window.open('./assets/Final-CV.pdf')"
-      >
+        onclick="window.open('./assets/Final-CV.pdf')">
         Download CV
       </button>
       <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -22,13 +21,13 @@
         src="./assets/linkedin.png"
         alt="My LinkedIn profile"
         class="icon"
-        onclick="location.href='https://linkedin.com/'"
+        onclick="location.href='https://linkedin.com/in/hosseintahami'"
       />
       <img
         src="./assets/github.png"
         alt="My Github profile"
         class="icon"
-        onclick="location.href='https://github.com/'"
+        onclick="location.href='https://github.com/HosseinTahami'"
       />
     </div>
   </div>
