--- a/components/contact.html
+++ b/components/contact.html
@@ -22,7 +22,7 @@
     <hr>
     <div class="contact-info-container">
       <img
-        src="./assets/Telegram.png"
+        src="./assets/telegram.png"
         alt="Telegram icon"
         class="icon contact-icon"
       />
