--- a/components/nav.html
+++ b/components/nav.html
@@ -6,6 +6,7 @@
       <li><a href="#certifications">Certifications</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#skills">Skills</a></li>
     </ul>
   </div>
 </nav>
