Update: Skills.html

--- a/components/skills.html
+++ b/components/skills.html
@@ -35,28 +35,28 @@
           <br>
           <div class="article-container">
             <article>
-              <img src="./assets/python.png" alt="Python" class="icon" />
+              <img src="./assets/skills/python.png" alt="Python" class="icon" />
               <div>
                 <h3>Python</h3>
                 <p>Advanced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/matlab.png" alt="MATLAB" class="icon" />
+              <img src="./assets/skills/matlab.png" alt="MATLAB" class="icon" />
               <div>
                 <h3>MATLAB</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/javascript.png" alt="JavaScript" class="icon" />
+              <img src="./assets/skills/javascript.png" alt="JavaScript" class="icon" />
               <div>
                 <h3>JavaScript</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/cpp.png" alt="C++" class="icon" />
+              <img src="./assets/skills/cpp.png" alt="C++" class="icon" />
               <div>
                 <h3>C++, C</h3>
                 <p>Intermediate</p>
@@ -74,35 +74,35 @@
           <br>
           <div class="article-container">
             <article>
-              <img src="./assets/tensorflow.png" alt="TensorFlow" class="icon" />
+              <img src="./assets/skills/tensorflow.png" alt="TensorFlow" class="icon" />
               <div>
                 <h3>TensorFlow</h3>
                 <p>Advanced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/pytorch.png" alt="PyTorch" class="icon" />
+              <img src="./assets/skills/pytorch.png" alt="PyTorch" class="icon" />
               <div>
                 <h3>PyTorch</h3>
                 <p>Advanced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/opencv.png" alt="OpenCV" class="icon" />
+              <img src="./assets/skills/opencv.png" alt="OpenCV" class="icon" />
               <div>
                 <h3>OpenCV</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-            <img src="./assets/pandas.png" alt="Pandas" class="icon" />
+            <img src="./assets/skills/pandas.png" alt="Pandas" class="icon" />
             <div>
               <h3>Pandas</h3>
               <p>Advanced</p>
             </div>
             </article>
             <article>
-              <img src="./assets/numpy.png" alt="numpy" class="icon" />
+              <img src="./assets/skills/numpy.png" alt="numpy" class="icon" />
               <div>
                 <h3>Numpy</h3>
                 <p>Advanced</p>
@@ -121,31 +121,24 @@
           <br>
           <div class="article-container">
             <article>
-              <img src="./assets/django.png" alt="Django" class="icon" />
+              <img src="./assets/skills/django.png" alt="Django" class="icon" />
               <div>
                 <h3>Django</h3>
                 <p>Advanced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/fastapi.png" alt="FastAPI" class="icon" />
+              <img src="./assets/skills/fastapi.png" alt="FastAPI" class="icon" />
               <div>
                 <h3>FastAPI</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/postgresql.png" alt="PostgreSQL" class="icon" />
+              <img src="./assets/skills/postgresql.png" alt="PostgreSQL" class="icon" />
               <div>
                 <h3>PostgreSQL</h3>
                 <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/git.png" alt="Git" class="icon" />
-              <div>
-                <h3>Git</h3>
-                <p>Advanced</p>
               </div>
             </article>
           </div>
@@ -160,21 +153,21 @@
           <br>
           <div class="article-container">
             <article>
-              <img src="./assets/git.png" alt="Git" class="icon" />
+              <img src="./assets/skills/git.png" alt="Git" class="icon" />
               <div>
                 <h3>Git</h3>
                 <p>Advanced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/docker.png" alt="Git" class="icon" />
+              <img src="./assets/skills/docker.png" alt="Git" class="icon" />
               <div>
                 <h3>Docker</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/linux.png" alt="Linux" class="icon" />
+              <img src="./assets/skills/linux.png" alt="Linux" class="icon" />
               <div>
                 <h3>Linux</h3>
                 <p>Intermediate</p>
@@ -184,7 +177,7 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+    <img src="./assets/skills/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
 
 </body>
