--- a/components/skills.html
+++ b/components/skills.html
@@ -167,7 +167,7 @@
               </div>
             </article>
             <article>
-              <img src="./assets/skills/linux.png" alt="Linux" class="icon" />
+              <img src="./assets/skills/Linux.png" alt="Linux" class="icon" />
               <div>
                 <h3>Linux</h3>
                 <p>Intermediate</p>
