--- a/components/skills.html
+++ b/components/skills.html
@@ -160,7 +160,7 @@
               </div>
             </article>
             <article>
-              <img src="./assets/skills/docker.png" alt="Git" class="icon" />
+              <img src="./assets/skills/docker.png" alt="Docker" class="icon" />
               <div>
                 <h3>Docker</h3>
                 <p>Basic</p>
