Update: skills.html

--- a/components/skills.html
+++ b/components/skills.html
@@ -23,6 +23,7 @@
   <section id="skills">
     <p class="section__text__p1">Explore My</p>
     <h1 class="title">Skills</h1>
+
     <div class="skills-details-container">
       <div class="about-containers">
 
@@ -95,11 +96,11 @@
               </div>
             </article>
             <article>
-            <img src="./assets/skills/pandas.png" alt="Pandas" class="icon" />
-            <div>
-              <h3>Pandas</h3>
-              <p>Advanced</p>
-            </div>
+              <img src="./assets/skills/pandas.png" alt="Pandas" class="icon" />
+              <div>
+                <h3>Pandas</h3>
+                <p>Advanced</p>
+              </div>
             </article>
             <article>
               <img src="./assets/skills/numpy.png" alt="numpy" class="icon" />
@@ -111,6 +112,11 @@
             <article>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="skills-details-container">
+      <div class="about-containers">
 
         <!-- Web Development & Backend -->
         <div class="details-container">
