--- a/components/certifications.html
+++ b/components/certifications.html
@@ -52,8 +52,8 @@
         <!--Natural Language Processing-->
         <div class="certification-item">
             <div class="certification-header">
-                <img src="./assets/skills/scikit-learn.png" alt="Machine Learning" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Natural Language Processing</a></h3>
+                <img src="./assets/dl.png" alt="NLP Specialization" class="cert-icon" />
+                <h3><a href="#" class="cert-link">Natural Language Processing Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> DeepLearning.AI & Coursera</p>
             <p><strong>Date:</strong> 10/2024</p>
@@ -78,8 +78,9 @@
         <!--Mathematics for Machine Learning-->
         <div class="certification-item">
             <div class="certification-header">
-                <img src="./assets/skills/scikit-learn.png" alt="Mathematics for Machine Learning Specialization" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Natural Language Processing</a></h3>
+                <img src="./assets/icl.png" alt="Mathematics for Machine Learning Specialization"
+                    class="cert-icon" />
+                <h3><a href="#" class="cert-link">Mathematics for Machine Learning Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> Imperial College London & Coursera</p>
             <p><strong>Date:</strong> 10/2024</p>
@@ -99,50 +100,56 @@
 
         <div class="certification-item">
             <div class="certification-header">
-                <img src="./assets/skills/pandas.png" alt="Data Analysis" class="cert-icon" />
+                <img src="./assets/quera.png" alt="Data Analysis" class="cert-icon" />
                 <h3><a href="#" class="cert-link">Task-Oriented Course in Data Analysis With Python</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 09/2024</p>
-        </div>
+        </div>  
 
+
+        <!--Django-->
         <div class="certification-item">
             <div class="certification-header">
-                <img src="./assets/skills/django.png" alt="Django" class="cert-icon" />
+                <img src="./assets/quera.png" alt="Django" class="cert-icon" />
                 <h3><a href="#" class="cert-link">Professional Project-Oriented Course In Backend Development With
                         Django</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 02/2024</p>
-            <div class="sub-certifications">
-                <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Django REST Framework</a></h4>
-                </div>
-                <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Database Design</a></h4>
-                </div>
-            </div>
         </div>
 
         <!--Git & Control Version-->
         <div class="certification-item">
             <div class="certification-header">
-                <img src="./assets/skills/git.png" alt="Git" class="cert-icon" />
+                <img src="./assets/quera.png" alt="Git" class="cert-icon" />
                 <h3><a href="#" class="cert-link">Task-Oriented Course in Version Control With Git</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 07/2023</p>
         </div>
 
-        <!--CATIA-->
+        <!--MATLAB-->
         <div class="certification-item">
             <div class="certification-header">
-                <img src="./assets/skills/matlab.png" alt="MATLAB" class="cert-icon" />
+                <img src="./assets/tit.png" alt="MATLAB" class="cert-icon" />
                 <h3><a href="#" class="cert-link">MATLAB Certification</a></h3>
             </div>
             <p><strong>Institution:</strong> Tehran Institute of Technology</p>
             <p><strong>Date:</strong> 04/2023</p>
         </div>
+
+        <!--CATIA-->
+        <div class="certification-item">
+            <div class="certification-header">
+                <img src="./assets/tit.png" alt="CATIA" class="cert-icon" />
+                <h3><a href="#" class="cert-link">CATIA Certification</a></h3>
+            </div>
+            <p><strong>Institution:</strong> Tehran Institute of Technology</p>
+            <p><strong>Date:</strong> 04/2023</p>
+        </div>
+
+
 
     </div>
 </section>
@@ -192,14 +199,14 @@
     }
 
     .cert-icon {
-        width: 30px;
-        height: 30px;
+        width: 10px;
+        height: 10px;
         object-fit: contain;
     }
 
     .cert-icon {
-        width: 50px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
         object-fit: contain;
     }
 
