--- a/components/nav.html
+++ b/components/nav.html
@@ -4,9 +4,9 @@
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
       <li><a href="#certifications">Certifications</a></li>
+      <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="#skills">Skills</a></li>
     </ul>
   </div>
 </nav>
@@ -23,6 +23,7 @@
       <li><a href="#certifications" onclick="toggleMenu()">certifications</a></li>
       <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
       <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+      <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
     </div>
   </div>
 </nav>
